# IliasUploaderUtility

./: .gitignore  .ilias_upload  Cargo.toml  LICENSE  README.md  flake.nix  windows_contextmenu.reg  windows_remove_contextmenu.reg
src/: arguments.rs  authentication.rs  config.rs  constants.rs  course.rs  excercise.rs  main.rs  preselect_delete_setting.rs  transform.rs  util.rs
src/excercise/: file.rs
src/ilias/: client.rs  exercise.rs  file.rs  folder.rs  local_file.rs  mod.rs
src/ilias/exercise/: assignment.rs
src/uploaders/: assignment_submission.rs  delete_selection.rs  excercise.rs  existing_file.rs  file_data.rs  file_with_filename.rs  ilias_folder.rs  mod.rs  upload_provider.rs  upload_utils.rs
src/uploaders/excercise/: existing_file.rs
