[package]
name = "ilias_uploader_utility"
version = "1.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version =  "0.12.8", features = ["cookies", "multipart", "blocking", "json"]}
scraper = "0.20.0"
clap = { version = "4.5.20", features = ["derive"] }
dialoguer = "0.11.0"
keyring = "3.5.0"
toml = "0.8.19"
serde = { version = "1.0.211", features = ["derive"] }
regex = "1.11.0"
anyhow = "1.0.90"
